--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="nyc.c4q.tarynking.simonsaysmaxtaryn.MainActivity">
+    tools:context="nyc.c4q.tarynking.simonsaysmaxtaryn.SimonMaxTarynActivity">
 
     <TextView
         android:layout_width="wrap_content"
@@ -51,15 +51,6 @@
         android:id="@+id/button_blue" />
 
     <Button
-        android:text="YELLOW"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/button_blue"
-        android:layout_alignStart="@+id/button_red"
-        android:background="@color/yellow"
-        android:id="@+id/button_yellow" />
-
-    <Button
         android:text="START"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -67,4 +58,22 @@
         android:layout_below="@+id/button_blue"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="53dp" />
+
+    <TextView
+        android:text=""
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button_start"
+        android:layout_toStartOf="@+id/button_red"
+        android:layout_marginTop="24dp"
+        android:id="@+id/textView" />
+
+    <Button
+        android:text="YELLOW"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/yellow"
+        android:id="@+id/button_yellow"
+        android:layout_above="@+id/button_start"
+        android:layout_toEndOf="@+id/button_start" />
 </RelativeLayout>
