--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,75 +5,58 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="nyc.c4q.tarynking.simonsaysmaxtaryn.SimonMaxTarynActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Welcome to Simon Says Game!"
-        android:id="@+id/textSimonSays" />
-
     <Button
-        android:text="GREEN"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="57dp"
-        android:layout_marginTop="71dp"
-        android:id="@+id/button_green"
-        android:background="@color/green"
-        android:layout_below="@+id/textSimonSays"
-        android:layout_alignParentStart="true" />
-
-    <Button
-        android:text="RED"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/button_green"
-        android:layout_toEndOf="@+id/textSimonSays"
-        android:layout_marginStart="14dp"
-        android:id="@+id/button_red"
-        android:background="@color/red"
-        android:layout_alignBottom="@+id/button_green"
-        style="@style/Widget.AppCompat.Button.Colored" />
-
-    <Button
-        android:text="BLUE"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/button_green"
-        android:layout_alignEnd="@+id/button_green"
-        android:layout_marginTop="97dp"
-        android:background="@color/blue"
-        android:id="@+id/button_blue" />
-
-    <Button
-        android:text="START"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/button_start"
-        android:layout_below="@+id/button_blue"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="53dp" />
-
-    <TextView
-        android:text=""
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/button_start"
-        android:layout_toStartOf="@+id/button_red"
-        android:layout_marginTop="24dp"
-        android:id="@+id/textView" />
+        android:paddingBottom="8dp"
+        android:text="Start"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        android:textAlignment="center"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
     <Button
-        android:text="YELLOW"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/yellow"
         android:id="@+id/button_yellow"
-        android:layout_above="@+id/button_start"
-        android:layout_toEndOf="@+id/button_start" />
+        android:text="yellow"
+        android:layout_marginTop="45dp"
+        android:background="@color/yellow"
+        android:layout_width="200dp"
+        android:layout_height="240dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_toStartOf="@+id/button_red" />
+
+    <Button
+        android:id="@+id/button_red"
+        android:text="red"
+        android:layout_marginTop="45dp"
+        android:background="@color/red"
+        android:layout_width="190dp"
+        android:layout_height="240dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true" />
+
+
+    <Button
+        android:id="@+id/button_blue"
+        android:text="blue"
+        android:background="@color/blue"
+        android:layout_width="225dp"
+        android:layout_height="260dp"
+        android:layout_below="@+id/button_yellow"
+        android:layout_alignParentStart="true"
+        />
+
+    <Button
+        android:id="@+id/button_green"
+        android:text="green"
+        android:background="@color/green"
+        android:layout_width="200dp"
+        android:layout_height="260dp"
+        android:layout_below="@+id/button_red"
+        android:layout_toEndOf="@+id/button_yellow" />
 </RelativeLayout>
